--- a/package.json
+++ b/package.json
@@ -1,17 +1,39 @@
 {
-  "name": "opensubtitles-proxy",
-  "version": "1.0.0",
-  "description": "Simple Express server for OpenSubtitles search and download",
+  "name": "opensubtitles-proxy-peak",
+  "version": "3.0.0",
+  "description": "🏆 The Ultimate OpenSubtitles Proxy API - Premium Features, Zero Cost",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "cheerio": "^1.0.0",
-    "express": "^4.21.1"
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "node-cache": "^5.1.2"
   },
-  "keywords": ["opensubtitles", "subtitles", "express", "proxy"],
-  "author": "",
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "opensubtitles",
+    "subtitles",
+    "api",
+    "proxy",
+    "express",
+    "cors",
+    "rate-limit",
+    "cache",
+    "munax",
+    "premium",
+    "free"
+  ],
+  "author": "Munax",
   "license": "MIT"
 }
